k8s/postgrest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: postgrest
spec:
  selector:
    app: postgrest
  ports:
    - name: http
      port: 80
      targetPort: 3000
